--- a/index.html
+++ b/index.html
@@ -3,9 +3,21 @@
 <head>
 <meta charset="utf-8">
 <title>Ironheart-Rune</title>
+	<link rel="stylesheet" href="Basic.css">
 </head>
 
 <body>
-	<p>hello</p>
+	<table style="width: 100%; padding: 0" cellpadding="0" cellspacing="0">
+		<tr>
+			<td>
+				<h1 style="text-align: left; padding-left: 25px; color: white">Ironheart-Rune</h1>
+			</td>
+		</tr>
+		<tr>
+			<td>
+				<img src="Images/banner1.png" style="width: 100%">
+			</td>
+		</tr>
+	</table>
 </body>
 </html>
